# DESIGN-study

./: README.md
lib/: logger.py
week1/: README.md  emitter.py  main.py
week1/test/: conftest.py  fixtures.py  pytest.ini  test_emitter.py
week2/: main.py  pyproject.toml
week2/cats/: controller.py  service.py
week2/nestpy/common/: __init__.py  constants.py  controller.py  injectable.py  methods.py  module.py  request.py  token.py  types.py
week2/nestpy/core/: __init__.py  factory.py  handler.py
week2/tests/: conftest.py  fixtures.py  pytest.ini  test_cats.py  test_token.py
