[tool.poetry]
name = "week2"
version = "0.1.0"
description = ""
authors = ["rudxor02 <rudxor07@naver.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.5.2"
pytest = "^7.4.3"
httpx = "^0.25.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
